--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@ language: java
 jdk:
   - openjdk8
 before_install:
-  - chmod +x mvn
+  - chmod +x mvnw
 after_success:
   - bash <(curl -s https://codecov.io/bash)
