--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,15 @@
 
     <properties>
         <java.version>1.8</java.version>
+        <!-- O endereço que leva à sua instalação do Sonar -->
+        <sonar.host.url>http://localhost:9000</sonar.host.url>
+        <!-- O login do seu usuário -->
+        <sonar.login>admin</sonar.login>
+        <!-- a senha de acesso deste usuário -->
+        <sonar.password>admin</sonar.password>
     </properties>
 
     <dependencies>
-        <!-- <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-rest</artifactId>
-        </dependency> -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
