--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,7 +1,8 @@
 # datasource
+spring.jpa.defer-datasource-initialization=true
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shadow
-spring.datasource.username=sa
+spring.datasource.username=root
 spring.datasource.data-password=
 # jpa
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
