--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,12 @@
             <version>6.2.0.Final</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>2.4.0</version>
+        </dependency>
+
     </dependencies>
 
     <repositories>
