--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
         <java.version>11</java.version>
         <sonar.organization>valneipereira</sonar.organization>
         <sonar.host.url>https://sonarcloud.io</sonar.host.url>
-        <sonar.coverage.exclusions>**/exceptions/**</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/exceptions/**, **/dto/**, **/controllers/**, **/entity/**</sonar.coverage.exclusions>
     </properties>
 
     <dependencies>
