--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 # profile
 spring.profiles.active=dev
 
+application.name=@project.artifactId@
+app.version=@project.version@
+build.timestamp=@timestamp@
